Commit staged by a Python script
