# src/model/v1/read/actuatorDto.js
@@ -1,6 +1,6 @@
 "use strict";
 Object.defineProperty(exports, "__esModule", { value: true });
-exports.ActuatorCommandDTO = exports.ActuatorDTO = void 0;
+exports.ActuatorConfigDTO = exports.ActuatorConfigType = exports.ActuatorDTO = void 0;
 const luxon_1 = require("luxon");
 const constants_1 = require("../../../constants");
 class ActuatorDTO {
@@ -21,32 +21,43 @@ class ActuatorDTO {
     }
 }
 exports.ActuatorDTO = ActuatorDTO;
-class ActuatorCommandDTO {
-    constructor(id, actuatorName, timeStamp, timesPerDay, toggleCommand, motorCommand) {
-        this.id = id;
+var ActuatorConfigType;
+(function (ActuatorConfigType) {
+    ActuatorConfigType[ActuatorConfigType["TOGGLE"] = 0] = "TOGGLE";
+    ActuatorConfigType[ActuatorConfigType["MOTOR"] = 1] = "MOTOR";
+    ActuatorConfigType[ActuatorConfigType["NONE"] = 2] = "NONE";
+})(ActuatorConfigType = exports.ActuatorConfigType || (exports.ActuatorConfigType = {}));
+class ActuatorConfigDTO {
+    constructor(actuatorName, timeStamp, timesPerDay, toggleConfig, motorConfig) {
         this.actuatorName = actuatorName;
         this.timeStamp = timeStamp;
-        this.toggleCommand = toggleCommand;
-        this.motorCommand = motorCommand;
+        this.toggleConfig = toggleConfig;
+        this.motorConfig = motorConfig;
         this.timesPerDay = timesPerDay;
+        if ((timesPerDay === 0 || !motorConfig) && toggleConfig)
+            this.type = ActuatorConfigType.TOGGLE;
+        else if (!toggleConfig && timesPerDay > 0 && motorConfig)
+            this.type = ActuatorConfigType.MOTOR;
+        else
+            this.type = ActuatorConfigType.NONE;
     }
     toJson() {
         const json = {
-            id: this.id,
             actuatorName: this.actuatorName,
             timeStamp: this.timeStamp,
-            timesPerDay: this.timesPerDay
+            timesPerDay: this.timesPerDay,
+            type: this.type
         };
-        if (!this.motorCommand)
-            json.toggleCommand = this.toggleCommand;
-        if (!this.toggleCommand)
-            json.motorCommand = this.motorCommand;
+        if (!this.motorConfig)
+            json.toggleConfig = this.toggleConfig;
+        if (!this.toggleConfig)
+            json.motorConfig = this.motorConfig;
         return json;
     }
     static fromJson(actuatorJson) {
         const unixNow = luxon_1.DateTime.now().setZone(constants_1.DATABASE_TIMEZONE).toUnixInteger();
-        return new ActuatorCommandDTO(typeof (actuatorJson.id) === 'number' ? actuatorJson.id : -1, typeof (actuatorJson.actuatorName) === 'string' ? actuatorJson.actuatorName : "", typeof (actuatorJson.timeStamp) === 'number' ? actuatorJson.timeStamp : unixNow, typeof (actuatorJson.timesPerDay) === 'number' ? actuatorJson.timesPerDay : 0, typeof (actuatorJson.toggleCommand) === 'object' ? actuatorJson.toggleCommand : null, typeof (actuatorJson.motorCommand) === 'object' ? actuatorJson.motorCommand : null);
+        return new ActuatorConfigDTO(typeof (actuatorJson.actuatorName) === 'string' ? actuatorJson.actuatorName : "", typeof (actuatorJson.timeStamp) === 'number' ? actuatorJson.timeStamp : unixNow, typeof (actuatorJson.timesPerDay) === 'number' ? actuatorJson.timesPerDay : 0, typeof (actuatorJson.toggleConfig) === 'object' ? actuatorJson.toggleConfig : null, typeof (actuatorJson.motorConfig) === 'object' ? actuatorJson.motorConfig : null);
     }
 }
-exports.ActuatorCommandDTO = ActuatorCommandDTO;
+exports.ActuatorConfigDTO = ActuatorConfigDTO;
 //# sourceMappingURL=actuatorDto.js.map
